--- a/SLD.WEB/Web.config
+++ b/SLD.WEB/Web.config
@@ -15,7 +15,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
 	<connectionStrings>
-		<add name="GEN" providerName="System.Data.SqlClient" connectionString="server=ASUS\SQLSERVER_2017CS;database=DEMO;Integrated Security=SSPI"/>
+		<add name="GEN" providerName="System.Data.SqlClient" connectionString="server=DESA13\SQL2017;database=DEMO;Integrated Security=SSPI"/>
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
