--- a/SLD.WEB/SLD.WEB.csproj
+++ b/SLD.WEB/SLD.WEB.csproj
@@ -89,8 +89,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Css\bootstrap.css" />
+    <Content Include="Css\fontawesome.css" />
     <Content Include="Css\jquery-ui.css" />
     <Content Include="Css\jquery-ui.theme.css" />
+    <Content Include="Css\solid.css" />
     <Content Include="Css\sweetalert2.css" />
     <Content Include="Css\theme.css" />
     <Content Include="Global.asax" />
@@ -106,6 +108,7 @@
     <Content Include="Scripts\lib\sld_ajax.js" />
     <Content Include="Scripts\lib\sweetalert2.min.js" />
     <Content Include="Web.config" />
+    <Content Include="webfonts\fa-solid-900.svg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -136,6 +139,10 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="webfonts\fa-solid-900.eot" />
+    <Content Include="webfonts\fa-solid-900.ttf" />
+    <Content Include="webfonts\fa-solid-900.woff" />
+    <Content Include="webfonts\fa-solid-900.woff2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
