--- a/SLD.WEB/Web.config
+++ b/SLD.WEB/Web.config
@@ -13,9 +13,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <globalization culture="es-MX" uiCulture="es-MX" requestEncoding="utf-8" responseEncoding="utf-8" fileEncoding="utf-8" />
   </system.web>
 	<connectionStrings>
-		<add name="GEN" providerName="System.Data.SqlClient" connectionString="server=DESA13\SQL2017;database=DEMO;Integrated Security=SSPI"/>
+		<add name="GEN" providerName="System.Data.SqlClient" connectionString="server=ASUS\SQLSERVER_2017CS;database=DEMO2;Integrated Security=SSPI"/>
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
